# cosmic-audio-bg

./: .gitignore  Cargo.toml  README.md
config/: default.ron
config/machines/: laptop-a.ron  laptop-b.ron  pop-os.ron
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: draw.rs  layer.rs  main.rs  menu.rs  power.rs  render.rs
crates/daemon/tests/: persist_roundtrip.rs
scripts/: deploy-second-machine.sh  install-deps.sh  install-prototype.sh  install-service.sh  test-prototype.sh
shaders/: idle-ambient.wgsl  pulse-aurora-prototype.wgsl  pulse-aurora.wgsl  sinusoids.wgsl  spectrum-bars.wgsl
systemd/: cosmic-audio-bg.service
