[package]
name = "cosmic-audio-bg-audio"
description = "PipeWire/Pulse monitor capture and FFT analysis for cosmic-audio-bg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
libpulse-binding = "2.28"
libpulse-simple-binding = "2.29"
rustfft.workspace = true
tracing.workspace = true
